<resources>
    <string name="app_name">DVT WeatherApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="author">muneza_dixon</string>
    <string name="menu_home">Home</string>
    <string name="menu_locations">Location</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="settings">settings</string>
    <string name="next">Next</string>
    <string name="kampala">city</string>
    <string name="please_set_your_current_location_by_city_or_county">Please set Your Current location, by City or County.</string>
    <string name="kampala_uganda">Insert YOur Location</string>
    <string name="locations">Locations</string>
    <string name="save_location">Save Location</string>
    <string name="location_pin">Location Pin</string>
    <string name="favorites">Favorites</string>
</resources>