<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar_locations"
        app:title=" "
        app:subtitle=" "
        android:background="@color/colorAccent"
        android:layout_height="?actionBarSize"/>

        <RelativeLayout
            android:id="@+id/imageHolder"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:layout_below="@id/toolbar_locations"
            android:background="@drawable/map_bg" />

        <TextView
            android:id="@+id/heading_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageHolder"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/please_set_your_current_location_by_city_or_county"
            android:textSize="18sp"
             />
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/et_userLocation"
        android:padding="20dp"
        android:hint="@string/kampala_uganda"
        app:boxBackgroundColor="@color/transparent"
        android:layout_below="@id/heading_settings"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textColor="@color/black_overlay"
            android:id="@+id/et_userLocation_input"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginStart="20dp"
        android:id="@+id/ic_pin"
        android:layout_below="@id/et_userLocation"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="wrap_content"
            android:id="@+id/ic_location_pin"
            android:contentDescription="@string/location_pin"
            android:src="@mipmap/location_pin_red"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/kampala"

            android:id="@+id/settings_txt_userLocation"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:text="@string/save_location"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_saveLocation"
        android:layout_below="@id/ic_pin"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>
</RelativeLayout>
</ScrollView>